# experiments

gf2tothe8/: Cargo.toml
gf2tothe8/src/: lib.rs
maze-talk/: Cargo.toml  README.md  outline
maze-talk/benches/: bfs_solver.rs  bitboard_solver.rs  dfs_solver.rs
maze-talk/src/: array_solver.rs  bitboard_demo.rs  bitboard_solver.rs  board.rs  intro.rs  lib.rs  main.rs  maze.rs  solvers.rs
